tests/baselines/reference/noErrorTruncation.errors.txt
tests/cases/compiler/noErrorTruncation.ts(10,7): error TS2322: Type 'number' is not assignable to type '{ someLongOptionA: string; } | { someLongOptionB: string; } | { someLongOptionC: string; } | { someLongOptionD: string; } | { someLongOptionE: string; } | { someLongOptionF: string; }'.


==== tests/cases/compiler/noErrorTruncation.ts (1 errors) ====
    // @noErrorTruncation
    
    type SomeLongOptionA = { someLongOptionA: string }
    type SomeLongOptionB = { someLongOptionB: string }
    type SomeLongOptionC = { someLongOptionC: string }
    type SomeLongOptionD = { someLongOptionD: string }
    type SomeLongOptionE = { someLongOptionE: string }
    type SomeLongOptionF = { someLongOptionF: string }
    
    const x: SomeLongOptionA
          ~
!!! error TS2322: Type 'number' is not assignable to type '{ someLongOptionA: string; } | { someLongOptionB: string; } | { someLongOptionC: string; } | { someLongOptionD: string; } | { someLongOptionE: string; } | { someLongOptionF: string; }'.
           | SomeLongOptionB
           | SomeLongOptionC
           | SomeLongOptionD
           | SomeLongOptionE
           | SomeLongOptionF = 42;
    